api-gateway/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: ghcr.io/ubaid4j/cloud-native-app-spring-boot/api-gateway:0.0.3-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /management/health/liveness
              port: 80
          readinessProbe:
            httpGet:
              path: /management/health/readiness
              port: 80
          volumeMounts:
            - mountPath: /workspace/config
              name: api-gateway-config-volume
      volumes:
        - name: api-gateway-config-volume
          configMap:
            name: api-gateway-config
